@@ -1,5 +1,6 @@
 Revision history for Async::IPC
 
+          - Renamed Channel pair attr to handle_pair
           - Refactored logging functions
           - MCP runs test loop
           - Native file watcher now looks for new files
